Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.13.2
-
None
-
-
5ce8cf70e8c1a7434f744f304edd3e5ea3fae943 (qt-creator/qt-creator/4.14)
Description
Attachments
Issue Links
- is required for
-
QDS-2918 Code model does not work for QtQuick Controls 2 with a Qt 6 kit
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-24772 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
323667,4 | qmljs: Fix parsing and and loading of qmldir imports | 4.14 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |